# project_trc

./: .gitattributes  .gitignore  Cargo.toml  build_wasm.sh  run_client  run_client_release  run_lua_file_server  run_server  setup_env.sh  tree.txt
_.cargo/: config.toml
actually_usable_voxel_mesh_gen/: Cargo.toml
actually_usable_voxel_mesh_gen/src/: data.rs  lib.rs  main.rs  stuff.rs  util.rs
client/: Cargo.toml  Trunk.toml  index.html  tree.txt
client/assets/: turtle.gltf  turtle_inactive.gltf  turtles.blend  turtles.blend1
client/src/: bundels.rs  chunk.rs  components.rs  entity_helper_fns.rs  events.rs  executable_files.rs  external_inv_support.rs  idk.rs  input.rs  inventory.rs  lerp_transform.rs  lib.rs  main.rs  primary_turtle_ui.rs  primary_ui.rs  raycast.rs  systems.rs  turtle.rs  turtle_input.rs  turtle_inventory.rs  turtle_movement.rs  turtle_stuff.rs  util.rs  websocket.rs  ws.rs
client/src/ws/: mod.rs  native.rs  wasm.rs
common/: Cargo.toml
common/src/: client_event_packets.rs  client_packets.rs  extensions.rs  lib.rs  pos3.rs  remote_control_packets.rs  turtle.rs  turtle_packets.rs  util.rs  vec3d.rs  world_data.rs
custom_egui_widgets/: Cargo.toml
custom_egui_widgets/examples/: test.rs
custom_egui_widgets/src/: item_box.rs  lib.rs  main.rs  ring.rs
lua/: .luarc.json  hot_patch.lua  packets.lua  run.lua  trc.lua  trc_meta.lua  util.lua
migrations/: 20240403215639_setup.sql  20240404011045_drop_inventories.sql
pathfinding/: Cargo.toml
pathfinding/src/: lib.rs
protocol/: Cargo.toml
protocol/defenitions/: client_packets.kdl  client_to_server.kdl  computer_packets.kdl  types.kdl
protocol/generator/: Cargo.toml
protocol/generator/src/: lib.rs  lua_generator.rs  main.rs  rust_generator.rs  types.rs
protocol/lua/: common.lua
server/: Cargo.toml  db.json
server/src/: clients.rs  computers.rs  connection_manager.rs  db.rs  handle_clients.rs  handle_turtles.rs  http_api.rs  lib.rs  main.rs  send_util.rs  session.rs  turtle.rs  turtles.rs
server/src/data_types/: arc_mutex.rs  client_map.rs  mod.rs  server_client.rs  server_turtle.rs  turtle_map.rs
server/src/util/: async_util.rs  mod.rs
