[workspace]
resolver = "2"
members = [
	"client",
	"common",
	"actually_usable_voxel_mesh_gen",
	"server",
	"custom_egui_widgets",
	"pathfinding",
	"protocol",
	"protocol/generator",
]
# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3
[workspace.dependencies]
thiserror = "1.0.56"
bevy = { version = "0.13.2", default-features = false }
smooth-bevy-cameras = "0.11.0"
serde_json = "1"
url = "2.5"
crossbeam-channel = "0.5"
futures-util = "0.3"
futures-channel = "0.3"
futures = "0.3"
bevy_egui = "0.26.0"
egui_code_editor = "=0.2.5"
pretty_env_logger = "0.5.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
tokio = { version = "1.36.0", features = ["full"] }
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.41"
serde = { version = "1.0.196", features = ["derive"] }
egui = "0.26.0"
actually_usable_voxel_mesh_gen = { path = "./actually_usable_voxel_mesh_gen" }
common = { path = "./common" }
custom_egui_widgets = { path = "./custom_egui_widgets" }
color-eyre = "0.6.3"
# anyhow = "1.0.79"
eyre = "0.6.12"
log = "0.4.20"
chrono = "0.4.33"
rand = "0.8.5"
axum = "0.7.5"
rayon = "1.8.1"
bevy_mod_raycast = "0.17"
bevy_mod_picking = { version = "0.19", default-features = false }
sqlx = { version = "0.7.4", features = [
	"runtime-tokio",
	"tls-rustls",
	"sqlite",
] }
tower-http = "0.5.2"
derive_more = "0.99"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3
