[package]
name = "trc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = [] }
common = { path = "../common" }
actually_usable_voxel_mesh_gen = { path = "../actually_usable_voxel_mesh_gen" }
smooth-bevy-cameras = "0.9.0"
serde_json = "1.0.96"
url = "2.3.1"
typetag = "0.2.8"
tungstenite = "0.19.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
future-utils = "0.12.1"
futures-util = "0.3.28"
futures-channel = "0.3.28"
futures = "0.3.28"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
