[package]
name = "trc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
thiserror.workspace = true
bevy = { workspace = true, default-features = true, features = ["wayland"] }
serde.workspace = true
common.workspace = true
custom_egui_widgets.workspace = true
actually_usable_voxel_mesh_gen.workspace = true
smooth-bevy-cameras.workspace = true
serde_json.workspace = true
url.workspace = true
crossbeam-channel.workspace = true
futures-util.workspace = true
futures-channel.workspace = true
futures.workspace = true
bevy_egui.workspace = true
pretty_env_logger.workspace = true
egui_code_editor.workspace = true
color-eyre.workspace = true
bevy_mod_raycast.workspace = true
bevy_mod_picking = { workspace = true, features = [
	"backend_raycast",
	"backend_egui",
] }
bevy_schminput = { git = "https://github.com/Schmarni-Dev/schminput",branch = "rewrite" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen-futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
bevy_dylib = "0.13.1"
