[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { workspace = true, default-features = false }
bevy_ecs = "0.14"
bevy_reflect = "0.14"
derive_more = "1.0.0"
serde.workspace = true
