[package]
name = "custom_egui_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
derive_more.workspace = true

[dev-dependencies]
eframe = { version = "0.29.1", features = ["wayland"] }

[[example]]
name = "test"
