[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0" }
tungstenite = { version = "0.19.0" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
futures-util = "0.3.28"
futures-channel = "0.3.28"
common = { path = "../common" }
anyhow = "1.0.71"
pretty_env_logger = "0.5.0"
chrono = "0.4.24"
rand = "0.8.5"
futures = "0.3.28"
