[package]
name = "trc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trc_protocol.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
futures-util.workspace = true
futures-channel.workspace = true
common.workspace = true
color-eyre.workspace = true
pretty_env_logger.workspace = true
chrono.workspace = true
rand.workspace = true
futures.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["fs"] }
derive_more = "1.0.0"
bevy_ecs = "0.14"
